<resources>
    <string name="app_name">JavaProject5</string>
    <string name="special_pizza_dropdown">Select a Pizza</string>
    <string name="ru_pizza_store">RU Pizza Store</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="build_your_own">Build Your Own Pizza</string>
    <string name="store_orders">Store Orders</string>
    <string name="view_cart">Your Cart</string>
    <string name="order_number">Order Number:</string>
    <string name="order_total">Order Total: $</string>
    <string name="emptyMoney">0.00</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="current_order">Current Order:</string>
    <string name="remove_order">REMOVE PIZZA</string>
    <string name="starting_num_0">0</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="clear_cart">CLEAR CART</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="sales_tax">Sales Tax: $</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="small">Small</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="price">Price: $</string>
    <string name="quantity">Quantity:</string>
    <string name="starting_number_1">1</string>
    <string name="alfredo">Alfredo</string>
    <string name="tomato">Tomato</string>
    <string name="small_price">8.99</string>
    <string name="select_toppings">Select Toppings:</string>
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="onion">Onion</string>
    <string name="mushroom">Mushroom</string>
    <string name="ham">Ham</string>
    <string name="black_olives">Black Olives</string>
    <string name="beef">Beef</string>
    <string name="shrimp">Shrimp</string>
    <string name="squid">Squid</string>
    <string name="crab_meat">Crab Meat</string>
    <string name="jalapenos">Jalapenos</string>
    <string name="bacon">Bacon</string>
    <string name="your_cart">Your Cart</string>

</resources>